# CPP_Field_Manual

./: .gitignore  TODO
myproject/: CMakeLists.txt  README.MD  Requirements.txt  builder.sh
myproject/NOTES/: Examples.cpp  Subjects.md
myproject/include/dynamic/: Sort.hpp
myproject/include/headerOnly/: MyLibrary3.hpp
myproject/include/static/: MyLibrary.hpp
myproject/main/: main.cpp
myproject/source/: MyLibrary.cpp  Sort.cpp
